// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkButton should render button correctly with all props 1`] = `
<AndroidBPKButtonView
  icon="tick"
  iconAlignment="leading"
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`Android BpkButton should render button correctly with icon 1`] = `
<AndroidBPKButtonView
  icon="tick"
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`Android BpkButton should render correctly with required props 1`] = `
<AndroidBPKButtonView
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`Android BpkButton should render icon only button correctly 1`] = `
<AndroidBPKButtonView
  icon="tick"
  iconOnly={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`Android BpkButton should render icon only button correctly 2`] = `
<AndroidBPKButtonView
  icon="tick"
  iconOnly={true}
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`Android BpkButton should render large button correctly with icon 1`] = `
<AndroidBPKButtonView
  icon="tick"
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`Android BpkButton should render large button correctly with required props 1`] = `
<AndroidBPKButtonView
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;
